--- a/WavemeterService/App.config
+++ b/WavemeterService/App.config
@@ -3,4 +3,14 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <probing privatePath="lib" />
+    </assemblyBinding>
+  </runtime>
+  <appSettings>
+    <add key="RefreshRate" value="60000" />
+    <add key="InterfaceName" value="Wi-Fi" />
+    <add key="Key2" value="2" />
+  </appSettings>
 </configuration>
