Added new software for sharing the wavelenght also without a service. Moved the service from x64 to x86 (the wavemeter .dll used in the PC official software is 32 bit)

--- a/WavemeterService/App.config
+++ b/WavemeterService/App.config
@@ -9,8 +9,8 @@
     </assemblyBinding>
   </runtime>
   <appSettings>
-    <add key="RefreshRate" value="60000"/>
-    <add key="InterfaceName" value="Wi-Fi"/>
+    <add key="RefreshRate" value="10000"/>
+    <add key="InterfaceName" value="Local Area Connection"/>
     <add key="Key2" value="2"/>
   </appSettings>
 </configuration>
